add Class of Thread